# SAIG

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.claude/: launch.json
apps/api/: alembic.ini  pyproject.toml
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 20a0913c83fe_phase3_predictions_model_registry_yield_.py  3f23ccfe6b5d_phase2_supply_chain_vehicles_orders_.py  4044d5ec3921_iam_baseline_orgs_users_roles_.py  b2630ec2033c_fieldops_catalog_regions_farmers_farms_.py  b3c88a0cbe88_phase2_weather_crop_health_inventory.py  c79bdb10fa67_phase3_risk_assessments.py
apps/api/saig/: __init__.py  app.py  main.py
apps/api/saig/ml/: __init__.py  demand_model.py  registry.py  routing.py  yield_model.py
apps/api/saig/modules/catalog/: models.py  routes.py  schemas.py  service.py
apps/api/saig/modules/crophealth/: models.py  repository.py  routes.py  schemas.py  service.py
apps/api/saig/modules/dashboard/: routes.py  schemas.py  service.py
apps/api/saig/modules/fieldops/: models.py  repository.py  routes.py  schemas.py  services.py
apps/api/saig/scripts/: seed.py  seed_demo.py  train_models.py
apps/api/saig/shared/: config.py  database.py  errors.py  geo.py  middleware.py  pagination.py  ratelimit.py  security.py
apps/api/tests/: conftest.py  helpers.py  test_auth.py  test_catalog.py  test_crophealth.py  test_dashboard.py  test_fieldops.py  test_geo.py  test_inventory.py  test_org_audit.py  test_predictions.py  test_rbac.py  test_risk.py  test_routing.py  test_supplychain.py  test_users.py  test_weather.py
(+98 files in other folders)
